--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,8 @@
 
   <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
   <!-- build:js vendor.min.js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers/thing-controller.js"></script>
-    <script src="js/models/thing-model.js"></script>
-    <script src="js/views/thing-view.js"></script>
+    <script src="../bower_components/jquery/jquery.js"></script>
+    <script src="../bower_components/firebase/firebase.js"></script>
   <!-- endbuild -->
   <!-- build:js app.min.js -->
     <script src="app.js"></script>
