--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <title>Map Sync</title>
+  <title>Map Stash</title>
   <!-- build:css vendor.min.css -->
     <link rel="stylesheet" href="../bower_components/normalize-css/normalize.css">
   <!-- endbuild -->
@@ -13,7 +13,6 @@
 
   <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
   <!-- build:js vendor.min.js -->
-    <script src="../bower_components/jquery/jquery.js"></script>
     <script src="../bower_components/firebase/firebase.js"></script>
   <!-- endbuild -->
   <!-- build:js app.min.js -->
