--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <title>Map Sync</title>
+  <title>Map Stash</title>
   <link rel="stylesheet" href="vendor.min.css"/>
 </head>
 <body>
